...
              children: [
                const SizedBox(height: 600.0),
                Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    ElevatedButton(
                      key: const Key('login_button'),
                      onPressed: showLogin,
                      style: ButtonStyle(
                        backgroundColor: MaterialStateProperty.all<Color>(
                            Colors.grey.withOpacity(0.3)),
                      ),
                      child: const Text('LOGIN'),
                    ),
                    const SizedBox(width: 16),
                    ElevatedButton(
                      key: const Key('signup_button'),
                      onPressed: showSignup,
                      child: const Text('SIGNUP'),
                    ),
                  ],
                ),
              ],
...
              ),
              Column(
                mainAxisSize: MainAxisSize.min,
                children: [
                  const SizedBox(height: 32),
                  TextField(
                    key: const Key('login_email_field'),
                    decoration: const InputDecoration(
                      labelText: 'Email',
                      border: OutlineInputBorder(
                        borderSide: BorderSide(),
                      ),
                    ),
                    onChanged: (value) => email = value,
                  ),
                  const SizedBox(height: 8),
                  TextField(
                    key: const Key('login_password_field'),
                    obscureText: true,
                    decoration: const InputDecoration(
                      labelText: 'Password',
                      border: OutlineInputBorder(
                        borderSide: BorderSide(),
                      ),
...
                    onChanged: (value) => password = value,
                  ),
                ],
              ),
              const SizedBox(height: 32),
              ElevatedButton(
                key: const Key('login_submit_button'),
                onPressed: () => onLogin(email, password),
                child: const Text('Login'),
              ),
            ],
          ),
        ),
...
                ),
                Column(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    const SizedBox(height: 16),
                    TextField(
                      key: const Key('signup_name_field'),
                      decoration: const InputDecoration(
                        labelText: 'Full name',
                        border: OutlineInputBorder(
                          borderSide: BorderSide(),
                        ),
                      ),
                      onChanged: (value) => name = value,
                    ),
                    const SizedBox(height: 8),
                    TextField(
                      key: const Key('signup_email_field'),
                      decoration: const InputDecoration(
                        labelText: 'Email',
                        border: OutlineInputBorder(
                          borderSide: BorderSide(),
                        ),
                      ),
                      onChanged: (value) => email = value,
                    ),
                    const SizedBox(height: 8),
                    IntlPhoneField(
                      key: const Key('signup_phone_field'),
                      decoration: const InputDecoration(
                        labelText: 'Phone Number',
                        border: OutlineInputBorder(
                          borderSide: BorderSide(),
                        ),
                      ),
...
                      onChanged: (phoneNum) {
                        phone = phoneNum.completeNumber;
                      },
                    ),
                    const SizedBox(height: 8),
                    TextField(
                      key: const Key('signup_birthday_field'),
                      decoration: const InputDecoration(
                        labelText: 'Birthday (mm/dd/yyyy)',
                        border: OutlineInputBorder(
                          borderSide: BorderSide(),
                        ),
                      ),
                      onChanged: (value) => birthDate = value,
                    ),
                    const SizedBox(height: 8),
                    TextField(
                      key: const Key('signup_password_field'),
                      obscureText: true,
                      decoration: const InputDecoration(
                        labelText: 'Password',
                        border: OutlineInputBorder(
                          borderSide: BorderSide(),
                        ),
                      ),
                      onChanged: (value) => password = value,
                    ),
                    const SizedBox(height: 8),
                    TextField(
                      key: const Key('signup_confirm_password_field'),
                      obscureText: true,
                      decoration: const InputDecoration(
                        labelText: 'Confirm password',
                        border: OutlineInputBorder(
                          borderSide: BorderSide(),
                        ),
...
                      onChanged: (value) => confirmPassword = value,
                    ),
                  ],
                ),
                const SizedBox(height: 16),
                ElevatedButton(
                  key: const Key('signup_submit_button'),
                  onPressed: () {
                    if (password == confirmPassword) {
                      onSignup(
                        name,
                        email,
                        phone,
...
